# quant-resources

./: .gitignore  Makefile  README.md  intro.md  myst.yml  pyproject.toml  requirements.txt  toc.yml
.github/: dependabot.yml
.github/workflows/: deploy-book.yml
.playwright-mcp/: page-2026-05-27T22-52-51-312Z.yml
2026 Video Lectures/101. Stop Using the Sharpe Ratio Until You Watch This/: qas3m.ipynb
2026 Video Lectures/107. How to Trade Options with the Black-Scholes Model/: htobs.ipynb
2026 Video Lectures/113. How to Trade the Cash Secured Puts/: httcc.ipynb
assets/: site.css
binder/: postBuild
scripts/: generate_toc.py  polish_notebooks.py  postprocess_html.py
