[project]
name = "quant-resources"
version = "0.1.0"
description = "Quant Guild lecture notebooks — Jupyter Book study site"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-book>=2.1,<3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "ipywidgets>=8.1",
    "yfinance>=0.2",
    "torch>=2.2",
    "wordcloud>=1.9",
    "nltk>=3.8",
    "spacy>=3.7",
]

[project.optional-dependencies]
binder = [
    "tensorflow>=2.16",
    # Optional API notebooks (need your own keys at runtime)
    "openai>=1.0",
    "alpaca-trade-api>=3.0",
]
# One notebook imports qfin (Quant Guild package); not on PyPI — install separately if needed.
all = ["quant-resources[binder]"]

[tool.uv]
package = false

[dependency-groups]
dev = []
